# api/admin/controller.go
@@ -139,3 +139,52 @@ func (Controller *Controller) ManageCustomerPoint(c echo.Context) error {
 		"result":   arr,
 	})
 }
+
+// Create godoc
+// @Summary Manage Customer
+// @description Manage Customer
+// @tags Admin
+// @Accept json
+// @Produce json
+// @Success 200 {object} admin.User
+// @Router /v1/admin/managecustomer [get]
+func (Controller *Controller) ManageCustomer(c echo.Context) error {
+	var err error
+	user1 := adminBusiness.User{
+		ID:       1,
+		Email:    "testuser1@gmail.com",
+		Password: "testpassworduser1",
+		Alamat:   "testalamat",
+	}
+	user2 := adminBusiness.User{
+		ID:       2,
+		Email:    "testuser2@gmail.com",
+		Password: "testpassworduser2",
+		Alamat:   "testalamat",
+	}
+	user3 := adminBusiness.User{
+		ID:       3,
+		Email:    "testuser3@gmail.com",
+		Password: "testpassworduser3",
+		Alamat:   "testalamat",
+	}
+	user4 := adminBusiness.User{
+		ID:       4,
+		Email:    "testuser4@gmail.com",
+		Password: "testpassworduser4",
+		Alamat:   "testalamat",
+	}
+	var arr []adminBusiness.User
+	arr = append(arr, user1)
+	arr = append(arr, user2)
+	arr = append(arr, user3)
+	arr = append(arr, user4)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, err.Error())
+	}
+	return c.JSON(http.StatusOK, map[string]interface{}{
+		"code":     200,
+		"messages": "success get manage point customer",
+		"result":   arr,
+	})
+}
